--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "nodemon ./src/app.js"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^3.2.0",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.1",
-    "telegraf": "^3.38.0"
+    "telegraf": "^3.38.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
